# c-parser

./: .gitignore  Cargo.toml  tate.push_error(  typos.toml
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  coverage.yml  docs.yml  fmt.yml  max_lines.yml  rust.yml  rustdoc.yml  tests.yml
a-lexer/: Cargo.toml
a-lexer/src/: lex_content.rs  lib.rs
a-lexer/src/numbers/: from_literal.rs  macros.rs  mod.rs  parse.rs  types.rs
a-lexer/src/state/: end_state.rs  escape.rs  lex_state.rs  mod.rs  symbol.rs
a-lexer/src/types/: escape.rs  keywords.rs  lex_data.rs  mod.rs  symbols.rs  tokens.rs
b-parser/: Cargo.toml
b-parser/src/: display.rs  lib.rs  literal.rs  parse_content.rs  state.rs
b-parser/src/keyword/: attributes.rs  functions.rs  mod.rs  sort.rs
b-parser/src/modifiers/: functions.rs  list_initialiser.rs  make_lhs.rs  mod.rs  push.rs
b-parser/src/operators/: binary.rs  conversions.rs  mod.rs  operator.rs  ternary.rs  unary.rs
b-parser/src/symbols/: handlers.rs  mod.rs  sort_symbols.rs
b-parser/src/tree/: can_push.rs  default.rs  mod.rs  push.rs
b-parser/src/variable/: declaration.rs  mod.rs  name.rs  traits.rs  value.rs
docs/: README.md  operators.md
examples/: cli.rs
src/: bin.rs  errors.rs  lib.rs  main.rs  parse.rs  test.rs  tree.rs  utils.rs
src/errors/: compile.rs  debug.rs  display.rs  error_location.rs  located.rs  location.rs  location_ptr.rs  mod.rs  result.rs
src/lexer/: api.rs  end_state.rs  escape.rs  handle_state.rs  lex_content.rs  lex_result.rs  lexing_state.rs  mod.rs  special_chars.rs  types.rs
src/lexer/numbers/: from_literal.rs  macros.rs  mod.rs  parse.rs  types.rs
src/lexer/state/: end_state.rs  escape.rs  lex_state.rs  mod.rs  symbol.rs
src/lexer/types/: escape.rs  escape_state.rs  keywords.rs  lex_data.rs  lexing_data.rs  lexing_state.rs  mod.rs  symbols.rs  tokens.rs  tokens_types.rs
src/lineariser/: basic_block.rs  declare.rs  macros.rs  mod.rs  ssa.rs  state.rs  symbol.rs  walker.rs
src/lineariser/types/: compat.rs  decorators.rs  mod.rs  name.rs  state.rs
src/lineariser/walk/: ast.rs  function.rs  mod.rs  operator.rs  variable.rs
src/parse/: mod.rs  numbers.rs  parsing_state.rs  special_chars.rs
src/parse/numbers/: base.rs  mod.rs  (+1 more)
src/parser/: blocks.rs  display.rs  literal.rs  mod.rs  parse_content.rs  state.rs  symbols.rs  tree.rs
src/types/: mod.rs
tests/: files.rs  lex_files.rs  lexer.rs  mod.rs  numbers.rs  output  parse_files.rs  parse_string.rs  parser.rs  strings.rs
tests/data/: control-flows.i  escape.c  general.i  lexer-numbers-1.c  lexer-numbers-2.c  main.i  min.i  no-control-flow.c  no-control-flow.i  old.i  operators.c  operators.i  popcount.i  smallpop.i  test.c
tests/lexer/: mod.rs  numbers.rs
tests/lineariser/: declarations.rs  literals.rs  mod.rs
tests/parser/: blocks.rs  control_flows.rs  errors.rs  functions.rs  mod.rs  numbers.rs  operators.rs  strings.rs  variables.rs
tests/runner/: macros.rs  mod.rs  run.rs  store.rs
tests/str/: blk.rs  ctrl.rs  err.rs  mod.rs  op.rs  var.rs
tests/strings/: control_flows.rs  errors.rs  functions.rs  mod.rs  operators.rs  variables.rs
tests/test/: blk.rs  ctrl.rs  func.rs  mod.rs  nb.rs  op.rs  pars.rs  str.rs  var.rs
utils/: Cargo.toml
utils/src/: display.rs  lib.rs
utils/src/errors/: compile.rs  debug.rs  display.rs  location.rs  mod.rs  result.rs
(+129 files in other folders)
