[package]
name = "c-parser"
version = "0.1.0"
edition = "2021"
authors = ["Tom Webber"]
license-file = "LICENSE"
repository = "https://www.github.com/t-webber/c-parser"
description = "A rust library to lex and parse C source files into Abstract Synthax Trees."
publish = false
keywords = ["parsing", "lexing", "compiling", "nostd"]
categories = ["compilers", "no-std", "no-std::alloc", "parser-implementations", "parsing"]

[dependencies]

[features]
debug = []