[package]
name = "c-parser"
version = "0.1.0"
edition = "2024"
authors = ["Tom Webber"]
license-file = "LICENSE"
repository = "https://www.github.com/t-webber/c-parser"
description = "A rust library to lex and parse C source files into Abstract Syntax Trees."
keywords = ["parsing", "lexing", "compiling", "nostd"]
readme = "docs/README.md"
categories = [
  "compilers",
  "no-std",
  "no-std::alloc",
  "parser-implementations",
  "parsing",
]

[features]
debug = []

