[package]
name = "c-parser"
version = "0.1.0"
edition = "2024"
authors = ["Tom Webber"]
license-file = "MIT or Apache-2.0"
repository = "https://www.github.com/t-webber/c-parser"
description = "A rust library to lex and parse C source files into Abstract Syntax Trees."
keywords = ["parsing", "lexing", "compiling", "nostd"]
readme = "docs/README.md"
categories = [
  "compilers",
  "no-std",
  "no-std::alloc",
  "parser-implementations",
  "parsing",
]

[features]
debug = []

[lints.rust]
missing_docs = "deny"
unused = "deny"
warnings = "deny"
deprecated_safe = "deny"
future_incompatible = "deny"
keyword_idents = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
refining_impl_trait = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

single_call_fn = "allow"
implicit_return = "allow"
pattern_type_mismatch = "allow"
blanket_clippy_restriction_lints = "allow"
mod_module_files = "allow"
pub_with_shorthand = "allow"
unseparated_literal_suffix = "allow"
question_mark_used = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
inline_trait_bounds = "allow"
else_if_without_else = "allow"
doc_include_without_cfg = "allow"
multiple_inherent_impl = "allow"

# TODO
doc_paragraphs_missing_punctuation = "allow"
unreachable = "allow"
expect_used = "allow"
unwrap_in_result = "allow"
missing_errors_doc = "allow"

[dev-dependencies]
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }
serde = "1.0.228"
