[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
debug = []
